--- a/NiziKit.Editor/Views/AddComponentPanel.axaml
+++ b/NiziKit.Editor/Views/AddComponentPanel.axaml
@@ -4,16 +4,21 @@
              x:Class="NiziKit.Editor.Views.AddComponentPanel"
              x:DataType="vm:GameObjectViewModel">
 
-    <Border Background="{DynamicResource CardBackgroundFillColorSecondaryBrush}"
-            CornerRadius="{DynamicResource ControlCornerRadius}"
-            Padding="8"
-            Margin="0,8,0,0">
-        <StackPanel Spacing="4">
-            <TextBlock Text="Add Component"
-                       Theme="{StaticResource BodyStrongTextBlockStyle}"
-                       Margin="0,0,0,8"/>
+    <Border Background="{StaticResource EditorSurfaceRaised}"
+            BorderBrush="{StaticResource EditorPanelBorder}"
+            BorderThickness="1"
+            Padding="12"
+            Margin="0,12,0,0">
+        <StackPanel Spacing="8">
+            <Border Background="{StaticResource EditorAccentBrush}"
+                    Padding="10,8"
+                    Margin="-12,-12,-12,8">
+                <TextBlock Text="Add Component"
+                           FontWeight="SemiBold"
+                           Foreground="#FFFFFF"/>
+            </Border>
 
-            <ScrollViewer MaxHeight="250"
+            <ScrollViewer MaxHeight="280"
                           VerticalScrollBarVisibility="Auto">
                 <ItemsControl x:Name="ComponentTypesList">
                     <ItemsControl.ItemTemplate>
@@ -21,7 +26,7 @@
                             <Button Content="{Binding Name}"
                                     HorizontalAlignment="Stretch"
                                     HorizontalContentAlignment="Left"
-                                    Padding="8,6"
+                                    Padding="12,10"
                                     Margin="0,2"
                                     Click="OnComponentTypeClicked"/>
                         </DataTemplate>
@@ -32,7 +37,7 @@
             <Button Content="Cancel"
                     HorizontalAlignment="Stretch"
                     HorizontalContentAlignment="Center"
-                    Padding="8,6"
+                    Padding="12,10"
                     Margin="0,8,0,0"
                     Command="{Binding ToggleAddComponentPanelCommand}"/>
         </StackPanel>
