--- a/NiziKit.Editor/Views/AssetBrowserView.axaml
+++ b/NiziKit.Editor/Views/AssetBrowserView.axaml
@@ -5,7 +5,8 @@
              x:Class="NiziKit.Editor.Views.AssetBrowserView"
              x:DataType="vm:AssetBrowserViewModel">
 
-    <Grid>
+    <Border Background="{StaticResource EditorPanelBackground}"
+            Padding="12">
         <views:FileBrowserGrid DataContext="{Binding FileBrowser}"/>
-    </Grid>
+    </Border>
 </UserControl>
