--- a/NiziKit.Editor/Views/Editors/AnimationPreviewEditor.axaml
+++ b/NiziKit.Editor/Views/Editors/AnimationPreviewEditor.axaml
@@ -2,78 +2,76 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              x:Class="NiziKit.Editor.Views.Editors.AnimationPreviewEditor">
 
-    <Border Background="{DynamicResource CardBackgroundFillColorSecondaryBrush}"
-            CornerRadius="4"
-            Padding="8"
-            Margin="0,4">
-        <StackPanel Spacing="8">
-            <!-- Animation Selection -->
+    <Border Background="{StaticResource EditorSurfaceRaised}"
+            BorderBrush="{StaticResource EditorPanelBorder}"
+            BorderThickness="1"
+            Padding="12"
+            Margin="0,6">
+        <StackPanel Spacing="12">
             <ComboBox x:Name="AnimationComboBox"
                       HorizontalAlignment="Stretch"
                       SelectionChanged="OnAnimationSelectionChanged"/>
 
-            <!-- Timeline -->
             <Grid ColumnDefinitions="Auto,*,Auto" Margin="0,4">
                 <TextBlock x:Name="CurrentTimeText"
                            Text="0:00"
-                           Foreground="{DynamicResource TextFillColorTertiaryBrush}"
+                           Foreground="{StaticResource EditorTextMuted}"
                            VerticalAlignment="Center"
-                           MinWidth="35"/>
+                           MinWidth="40"/>
                 <Slider x:Name="TimelineSlider"
                         Grid.Column="1"
                         Minimum="0"
                         Maximum="1"
                         Value="0"
-                        Margin="8,0"
+                        Margin="10,0"
                         ValueChanged="OnTimelineValueChanged"/>
                 <TextBlock x:Name="DurationText"
                            Grid.Column="2"
                            Text="0:00"
-                           Foreground="{DynamicResource TextFillColorTertiaryBrush}"
+                           Foreground="{StaticResource EditorTextMuted}"
                            VerticalAlignment="Center"
-                           MinWidth="35"
+                           MinWidth="40"
                            TextAlignment="Right"/>
             </Grid>
 
-            <!-- Playback Controls -->
             <StackPanel Orientation="Horizontal"
                         HorizontalAlignment="Center"
-                        Spacing="4">
+                        Spacing="8">
                 <Button x:Name="StopButton"
                         Content="Stop"
-                        Padding="12,6"
+                        Padding="16,8"
                         Click="OnStopClicked"
                         ToolTip.Tip="Stop"/>
                 <Button x:Name="PlayPauseButton"
                         Content="Play"
-                        Padding="16,6"
+                        Padding="20,8"
                         Click="OnPlayPauseClicked"
-                        ToolTip.Tip="Play/Pause"/>
+                        ToolTip.Tip="Play/Pause"
+                        Classes="accent"/>
                 <ToggleButton x:Name="LoopButton"
                               Content="Loop"
-                              Padding="12,6"
+                              Padding="16,8"
                               IsChecked="True"
                               ToolTip.Tip="Loop"/>
             </StackPanel>
 
-            <!-- Speed Control -->
             <Grid ColumnDefinitions="Auto,*,Auto">
                 <TextBlock Text="Speed"
-                           Foreground="{DynamicResource TextFillColorTertiaryBrush}"
+                           Foreground="{StaticResource EditorTextMuted}"
                            VerticalAlignment="Center"/>
                 <Slider x:Name="SpeedSlider"
                         Grid.Column="1"
                         Minimum="0.1"
                         Maximum="2"
                         Value="1"
-                        Margin="8,0"
+                        Margin="10,0"
                         ValueChanged="OnSpeedValueChanged"/>
                 <TextBlock x:Name="SpeedText"
                            Grid.Column="2"
                            Text="1.0x"
-                           Foreground="{DynamicResource TextFillColorTertiaryBrush}"
+                           Foreground="{StaticResource EditorTextSecondary}"
                            VerticalAlignment="Center"
-                           MinWidth="30"
+                           MinWidth="36"
                            TextAlignment="Right"/>
             </Grid>
         </StackPanel>
