--- a/NiziKit.Editor/Views/Editors/AnimationSelectorEditor.axaml
+++ b/NiziKit.Editor/Views/Editors/AnimationSelectorEditor.axaml
@@ -1,6 +1,9 @@
 <UserControl xmlns="https://github.com/avaloniaui"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              x:Class="NiziKit.Editor.Views.Editors.AnimationSelectorEditor">
+
     <ComboBox x:Name="AnimationComboBox"
-              HorizontalAlignment="Stretch"/>
+              HorizontalAlignment="Stretch"
+              Background="{StaticResource EditorPanelElevated}"
+              BorderBrush="{StaticResource EditorPanelBorder}"/>
 </UserControl>
