--- a/NiziKit.Editor/Views/Editors/AssetRefEditor.axaml
+++ b/NiziKit.Editor/Views/Editors/AssetRefEditor.axaml
@@ -2,17 +2,18 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              x:Class="NiziKit.Editor.Views.Editors.AssetRefEditor">
 
-    <StackPanel Spacing="6">
-        <!-- Pack Selection -->
-        <Grid ColumnDefinitions="80,*">
+    <StackPanel Spacing="8">
+        <Grid ColumnDefinitions="70,*">
             <TextBlock Grid.Column="0"
                        Text="Pack"
-                       VerticalAlignment="Center"/>
+                       VerticalAlignment="Center"
+                       Foreground="{StaticResource EditorTextSecondary}"/>
             <Border Grid.Column="1"
                     x:Name="PackSelectorHost"
-                    Background="{DynamicResource CardBackgroundFillColorSecondaryBrush}"
-                    CornerRadius="{DynamicResource ControlCornerRadius}"
-                    Padding="8,6"
+                    Background="{StaticResource EditorSurfaceRaised}"
+                    BorderBrush="{StaticResource EditorPanelBorder}"
+                    BorderThickness="1"
+                    Padding="10,8"
                     Cursor="Hand">
                 <Grid ColumnDefinitions="*,Auto">
                     <TextBlock Grid.Column="0"
@@ -23,22 +24,23 @@
                     <PathIcon Grid.Column="1"
                               Data="M7,10L12,15L17,10H7Z"
                               Width="12" Height="12"
-                              Foreground="{DynamicResource TextFillColorTertiaryBrush}"
-                              Margin="6,0,0,0"/>
+                              Foreground="{StaticResource EditorTextMuted}"
+                              Margin="8,0,0,0"/>
                 </Grid>
             </Border>
         </Grid>
 
-        <!-- Asset Selection -->
-        <Grid ColumnDefinitions="80,*">
+        <Grid ColumnDefinitions="70,*">
             <TextBlock Grid.Column="0"
                        Text="Asset"
-                       VerticalAlignment="Center"/>
+                       VerticalAlignment="Center"
+                       Foreground="{StaticResource EditorTextSecondary}"/>
             <Border Grid.Column="1"
                     x:Name="AssetSelectorHost"
-                    Background="{DynamicResource CardBackgroundFillColorSecondaryBrush}"
-                    CornerRadius="{DynamicResource ControlCornerRadius}"
-                    Padding="8,6"
+                    Background="{StaticResource EditorSurfaceRaised}"
+                    BorderBrush="{StaticResource EditorPanelBorder}"
+                    BorderThickness="1"
+                    Padding="10,8"
                     Cursor="Hand">
                 <Grid ColumnDefinitions="*,Auto">
                     <TextBlock Grid.Column="0"
@@ -48,30 +50,28 @@
                                TextTrimming="CharacterEllipsis"/>
                     <PathIcon Grid.Column="1"
                               Data="M15.5,14L20.5,19L19,20.5L14,15.5V14.71L13.73,14.43C12.59,15.41 11.11,16 9.5,16A6.5,6.5 0 0,1 3,9.5A6.5,6.5 0 0,1 9.5,3A6.5,6.5 0 0,1 16,9.5C16,11.11 15.41,12.59 14.43,13.73L14.71,14H15.5M9.5,14C12,14 14,12 14,9.5C14,7 12,5 9.5,5C7,5 5,7 5,9.5C5,12 7,14 9.5,14Z"
-                              Width="12" Height="12"
-                              Foreground="{DynamicResource TextFillColorTertiaryBrush}"
-                              Margin="6,0,0,0"
+                              Width="14" Height="14"
+                              Foreground="{StaticResource EditorAccentBrush}"
+                              Margin="8,0,0,0"
                               ToolTip.Tip="Browse assets"/>
                 </Grid>
             </Border>
         </Grid>
 
-        <!-- Pack selector popup (small dropdown) -->
         <Popup x:Name="PackSelectorPopup"
                IsLightDismissEnabled="True"
                Placement="Bottom"
                WindowManagerAddShadowHint="True">
-            <Border Background="{DynamicResource SolidBackgroundFillColorSecondaryBrush}"
-                    BorderBrush="{DynamicResource CardStrokeColorDefaultBrush}"
+            <Border Background="{StaticResource EditorPanelBackground}"
+                    BorderBrush="{StaticResource EditorPanelBorder}"
                     BorderThickness="1"
-                    CornerRadius="{DynamicResource ControlCornerRadius}"
-                    Padding="8"
-                    MinWidth="180"
-                    MaxHeight="280">
+                    Padding="10"
+                    MinWidth="200"
+                    MaxHeight="300">
                 <StackPanel Spacing="8">
                     <TextBox x:Name="PackSearchBox"
                              Watermark="Search packs..."/>
-                    <ScrollViewer MaxHeight="200"
+                    <ScrollViewer MaxHeight="220"
                                   HorizontalScrollBarVisibility="Disabled"
                                   VerticalScrollBarVisibility="Auto">
                         <ItemsControl x:Name="PackItemsControl"/>
