--- a/NiziKit.Editor/Views/FileBrowserGrid.axaml
+++ b/NiziKit.Editor/Views/FileBrowserGrid.axaml
@@ -7,11 +7,9 @@
              x:DataType="vm:FileBrowserViewModel">
 
     <Grid RowDefinitions="Auto,*">
-        <!-- Toolbar -->
         <Border Grid.Row="0"
-                Background="{DynamicResource CardBackgroundFillColorSecondaryBrush}"
-                CornerRadius="{DynamicResource ControlCornerRadius}"
-                Padding="12,8"
+                Background="{StaticResource EditorPanelSecondaryBackground}"
+                Padding="12,10"
                 Margin="0,0,0,8">
             <Grid ColumnDefinitions="Auto,*,Auto">
                 <Button Grid.Column="0"
@@ -40,20 +38,18 @@
                                 <StackPanel Orientation="Horizontal" VerticalAlignment="Center">
                                     <Button Command="{Binding $parent[ItemsControl].DataContext.NavigateToCommand}"
                                             CommandParameter="{Binding Path}"
-                                            Background="Transparent"
-                                            BorderThickness="0"
-                                            Padding="10,12"
+                                            Padding="10,8"
                                             Cursor="Hand"
+                                            Classes="ghost"
                                             VerticalAlignment="Center">
                                         <TextBlock Text="{Binding Name}"
-                                                   Classes="body"
-                                                   Foreground="{DynamicResource TextFillColorPrimaryBrush}"/>
+                                                   Classes="body"/>
                                     </Button>
                                     <TextBlock Text="/"
                                                Classes="body"
                                                VerticalAlignment="Center"
-                                               Margin="2,0"
-                                               Foreground="{DynamicResource TextFillColorTertiaryBrush}"/>
+                                               Margin="4,0"
+                                               Foreground="{StaticResource EditorTextMuted}"/>
                                 </StackPanel>
                             </DataTemplate>
                         </ItemsControl.ItemTemplate>
@@ -62,7 +58,7 @@
 
                 <ComboBox Grid.Column="2"
                           SelectedIndex="{Binding FilterIndex}"
-                          MinWidth="140">
+                          MinWidth="150">
                     <ComboBoxItem Content="All Files"/>
                     <ComboBoxItem Content="Models"/>
                     <ComboBoxItem Content="Textures"/>
@@ -73,14 +69,15 @@
             </Grid>
         </Border>
 
-        <!-- File Grid -->
         <Border Grid.Row="1"
-                Background="{DynamicResource CardBackgroundFillColorDefaultBrush}"
-                CornerRadius="{DynamicResource ControlCornerRadius}">
+                Background="{StaticResource EditorSurfaceRaised}"
+                BorderBrush="{StaticResource EditorPanelBorder}"
+                BorderThickness="1">
             <ListBox x:Name="FileGrid"
                      ItemsSource="{Binding Entries}"
                      SelectedItem="{Binding SelectedEntry}"
                      SelectionMode="Single"
+                     Background="Transparent"
                      ScrollViewer.HorizontalScrollBarVisibility="Disabled">
                 <ListBox.ItemsPanel>
                     <ItemsPanelTemplate>
@@ -89,17 +86,13 @@
                 </ListBox.ItemsPanel>
                 <ListBox.ItemTemplate>
                     <DataTemplate x:DataType="services:FileEntry">
-                        <Border Width="180" Height="180"
-                                Margin="8"
-                                Background="{DynamicResource CardBackgroundFillColorSecondaryBrush}"
-                                CornerRadius="8"
-                                Padding="14"
+                        <Border Classes="content-tile"
                                 ToolTip.Tip="{Binding Name}">
                             <Grid RowDefinitions="Auto,*">
                                 <PathIcon Grid.Row="0"
                                           Data="{Binding IconData}"
-                                          Width="64" Height="64"
-                                          Foreground="{DynamicResource TextFillColorSecondaryBrush}"
+                                          Width="56" Height="56"
+                                          Foreground="{StaticResource EditorTextSecondary}"
                                           HorizontalAlignment="Center"
                                           VerticalAlignment="Center"
                                           Margin="0,8,0,0"/>
