--- a/NiziKit.Editor/Views/InlineContextMenu.axaml
+++ b/NiziKit.Editor/Views/InlineContextMenu.axaml
@@ -4,15 +4,14 @@
              IsVisible="False">
 
     <Border x:Name="MenuBorder"
-            Background="{DynamicResource CardBackgroundFillColorDefaultBrush}"
-            BorderBrush="{DynamicResource CardStrokeColorDefaultBrush}"
+            Background="{StaticResource EditorPanelBackground}"
+            BorderBrush="{StaticResource EditorPanelBorder}"
             BorderThickness="1"
-            CornerRadius="{DynamicResource OverlayCornerRadius}"
-            Padding="4"
-            MinWidth="180"
+            Padding="6"
+            MinWidth="200"
             HorizontalAlignment="Left"
             VerticalAlignment="Top"
-            BoxShadow="0 4 16 0 #40000000">
+            BoxShadow="0 4 20 0 #50000000">
         <StackPanel x:Name="MenuItems" Spacing="2"/>
     </Border>
 
